[package]
name = "tasky"
version = "0.1.1"
edition = "2021"
description = "개인용 할일 관리 CLI 도구"
authors = ["Ryou"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"  # 컬러 출력을 위해 추가
prettytable-rs = "0.10"  # 테이블 형식 출력을 위해 추가
dirs = "5.0"  # 시스템 디렉토리 경로를 위해 추가

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"